# Distributed-Messaging-App

./: .gitignore  README.md  pyproject.toml  requirements.txt
claude-proofs/: .gitignore  FINDINGS.md  README.md
claude-proofs/easycrypt/: MLKEM_Split.ec  PROOF_SKETCH.md
claude-proofs/kem_split/: verify_split_indcca.py
claude-proofs/results/: kem_split.txt  tamarin.txt  tlc.txt  verifpal.txt
claude-proofs/scripts/: run_all.sh  run_kem_split.sh  run_tamarin.sh  run_tla.sh  run_verifpal.sh
claude-proofs/tamarin/: scka_double_ratchet.spthy
claude-proofs/tla/: SCKA.cfg  SCKA.tla  SCKA_small.cfg
claude-proofs/verifpal/: mlkem_braid_full.vp
docs/: FORMAL_VERIFICATION.md  PROJECT_STATE.md  PROTOCOL_SPEC.md  RUST_REWRITE.md
formal/easycrypt/: MLKEM_Split.ec
formal/tamarin/: mlkem_braid.spthy
formal/tla/: SCKA.tla
ml_kem_braid/: __init__.py  tls.py  wire.py
ml_kem_braid/client/: __init__.py  anonymous_transport.py  client.py  (+2 more)
src/: networking.py  node.py  protocol.py
tests/: test_anonymous_circuits.py  test_anonymous_transport.py  test_braid.py  test_braid_protocol.py  test_client_vault.py  test_contacts_api.py  test_crypto_provider.py  test_decentralized_descriptors.py  test_decentralized_docs.py  test_decentralized_integration.py  test_decentralized_records.py  test_decentralized_services.py  test_double_ratchet.py  test_erasure.py  test_federated_relays.py  test_integration_scenarios.py  test_kem.py  test_opk_leases.py  test_pqxdh.py  test_rendezvous.py  test_security_fixes.py  test_server_testnet.py  test_store_backends.py  test_tls.py  test_usernames.py  test_websocket_transport.py
(+52 files in other folders)
