[project]
name = "ml-kem-braid"
version = "0.2.0"
description = "Real (FIPS-203) implementation of Signal's ML-KEM Braid SCKA, with PQXDH + Sesame-style chat scaffolding"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "KEM-Braid VPN research" }]

dependencies = [
    # Post-quantum ML-KEM (FIPS 203). kyber-py is the ONLY pure-Python lib that
    # exposes the K-PKE internals needed for the Braid incremental Encaps1/Encaps2
    # split. liboqs/pycryptodome only offer monolithic encaps() and cannot do it.
    "kyber-py>=0.0.4",
    # Classical primitives: X25519 (PQXDH), HKDF, HMAC, Ed25519 signatures.
    "cryptography>=42.0.0",
    # AES-256-GCM authenticated encryption for chat payloads + the DRBG kyber-py
    # uses for deterministic/test vectors.
    "pycryptodome>=3.20.0",
    # Real Reed-Solomon erasure coding for the Braid chunk stream.
    "reedsolo>=1.7.0",
    # FastAPI chat/key-distribution server + client.
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
]

[project.scripts]
braid-server = "ml_kem_braid.server.app:main"
braid-testnet = "ml_kem_braid.testnet.demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_kem_braid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
